CC0 public domain dedication

--- a/package.wxs
+++ b/package.wxs
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
+<!--
+WiX example with automatic file discovery via Heat
+
+Written in 2022 by John Leen
+
+To the extent possible under law, the author(s) have dedicated all copyright and related and neighboring rights to this software to the public domain worldwide. This software is distributed without any warranty.
+
+You should have received a copy of the CC0 Public Domain Dedication along with this software. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
+-->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="{{GUID}}"
            UpgradeCode="{{GUID}}"
